# chinese_reader_app

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: test.yml
books/: mistborn_complete.epub  steelheart.epub  the_martian.epub  way_king_xia.epub  word_radiance_xia.epub
docs/superpowers/plans/: 2026-04-25-phase1-offline-log-unread-badges.md  2026-04-25-phase2-linux-http-server.md
docs/superpowers/specs/: 2026-04-25-cross-device-reader-design.md
public/: manifest.webmanifest
scripts/: download-dictionaries.js  import_bofm.py  import_dc.py  import_ebook.py  import_gc.py  import_nt.py  import_ot.py  import_pdf.py  import_pgp.py  import_utils.py  main.py  parse_wordfreq.py  pyproject.toml  sync-db-to-linux.sh
src/: main.ts  state.ts  style.css  sw.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: analysis.rs  dictionary.rs  known_words.rs  learning.rs  library.rs  mod.rs  settings.rs  speed.rs  user_dictionary.rs
src-tauri/src/dictionary/: error.rs  lookup.rs  mod.rs  models.rs  schema.rs  user.rs
src-tauri/src/dictionary/sources/: cedict.rs  kangxi.rs  mod.rs  moedict.rs
src/lib/: api.ts  dictionary.ts  idb.ts  learning.ts  library.ts  speed.ts  sync.ts  vocab-cache.ts
src/views/: dictionary-view.ts  learning-view.ts  library-view.ts  prestudy-view.ts  speed-view.ts  stats-view.ts
